tests/NormalTests/paczka1/fuzzy1/82295042.err
Error in line 8: tRy21YRb A468 20,5
Error in line 3: Q3ST A825 0,4
Error in line 12: Q3ST A468 11,5
Error in line 20: kcu4lS A58 29,6
Error in line 23: TMInTvqYI A825 41,9
Error in line 27: TMInTvqYI A468 79,9
Error in line 28: TMInTvqYI A825 912,4
